fixed image border clipping.

--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,8 @@ header {
   margin: 50px auto;
   display: flex;
   justify-content: center;
+  position: relative;
+  z-index: 2;
 }
 
 #header__img--refund {
